drop statik
